#115 One Improvement on the GC Repo trade web page and some fixes